force-app/main/default/objects/Monthly_KPI_Employee__c/Monthly_KPI_Employee__c.object-meta.xml
<CustomObject>
    <label>Monthly KPI Employee</label>
    <nameField>
        <label>Monthly KPI Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly KPI Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>