force-app/main/default/objects/Monthly_KPI_Employee__c/fields/A_A_Discount__c.field-meta.xml
<CustomField>
    <fullName>A_A_Discount__c</fullName>
    <label>A&amp;A Discount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>