force-app/main/default/objects/Monthly_KPI_Employee__c/fields/A_A_Rate__c.field-meta.xml
<CustomField>
    <fullName>A_A_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>A&amp;A Rate</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>