force-app/main/default/objects/Monthly_KPI_Employee__c/fields/A_A_Service_Revenue__c.field-meta.xml
<CustomField>
    <fullName>A_A_Service_Revenue__c</fullName>
    <label>A&amp;A Service Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>