force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission B4 Achievement Rate</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>