force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Content_KPI_Score__c.field-meta.xml
<CustomField>
    <fullName>Content_KPI_Score__c</fullName>
    <formula>IF( Role__c = &apos;Sales Consultant&apos;,  KPI_Rule_5_Value_Percent__c*100 ,  KPI_Rule_6_Value_Percent__c*100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content KPI Score (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>