force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Count_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Count_Team_Member__c</fullName>
    <label>Count Team Member</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>