force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Coupon_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Warranty__c</fullName>
    <label>Coupon / Warranty</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>