force-app/main/default/objects/Monthly_KPI_Employee__c/fields/CSI__c.field-meta.xml
<CustomField>
    <fullName>CSI__c</fullName>
    <label>CSI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>