force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Department_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Department_Revenue__c</fullName>
    <formula>IF( Role__c = &apos;Sales AM/Manager&apos;,  KPI_Rule_2_Value__c / KPI_Rule_2_Target__c  ,  
     IF( Role__c = &apos;PCA Supervisor&apos;,  KPI_Rule_1_Value__c /  KPI_Rule_1_Target__c ,
          IF( Role__c = &apos;Service AM/Sup&apos;,  KPI_Rule_1_Service_Value__c /  KPI_Rule_1_Service_Target__c , 0) 

 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dept KPI Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>