force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount Commission</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>