force-app/main/default/objects/Monthly_KPI_Employee__c/fields/E_Commerce__c.field-meta.xml
<CustomField>
    <fullName>E_Commerce__c</fullName>
    <label>E Commerce Commission</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>