force-app/main/default/objects/Monthly_KPI_Employee__c/fields/E_Commerce_Rate__c.field-meta.xml
<CustomField>
    <fullName>E_Commerce_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>E Commerce Rate</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>