force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Monthly KPI Employees</relationshipLabel>
    <relationshipName>Monthly_KPI_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>