force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Hour_Sold_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Hour_Sold_Revenue__c</fullName>
    <label>Hour Sold Commission</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>