force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Incentive_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Scheme__c</fullName>
    <label>Incentive Scheme</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>