force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Individual_A_A_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Individual_A_A_Revenue__c</fullName>
    <formula>If(Count_Team_Member__c &gt; 0, Total_A_A_Revenue__c  /  Count_Team_Member__c , Total_A_A_Revenue__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual A&amp;A Sales Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>