force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Individual_Discount__c.field-meta.xml
<CustomField>
    <fullName>Individual_Discount__c</fullName>
    <formula>If(Count_Team_Member__c  &gt; 0 ,Total_Discount__c /  Count_Team_Member__c , Total_Discount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>