force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Individual_Part_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Individual_Part_Revenue__c</fullName>
    <formula>If(Count_Team_Member__c &gt; 0, Total_Part_Revenue__c  /  Count_Team_Member__c , Total_Part_Revenue__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual	Part Sales Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>