force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Individual_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Individual_Voucher__c</fullName>
    <formula>Total_Voucher__c /  Count_Team_Member__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Voucher</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>