force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Is_Lock_Formula__c.field-meta.xml
<CustomField>
    <fullName>Is_Lock_Formula__c</fullName>
    <formula>Monthly_KPI__r.Is_Lock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lock Formula</label>
    <type>Checkbox</type>
</CustomField>