force-app/main/default/objects/Monthly_KPI_Employee__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <label>KPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>