force-app/main/default/objects/Monthly_KPI_Employee__c/fields/KPI_Category_Management__c.field-meta.xml
<CustomField>
    <fullName>KPI_Category_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI Category Management</label>
    <referenceTo>KPI_Category_Management__c</referenceTo>
    <relationshipLabel>Monthly KPI Employees</relationshipLabel>
    <relationshipName>Monthly_KPI_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>