force-app/main/default/objects/Monthly_KPI_Employee__c/fields/KPI_Rate__c.field-meta.xml
<CustomField>
    <fullName>KPI_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Achievement rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>