force-app/main/default/objects/Monthly_KPI_Employee__c/fields/KPI_Rule_2_Max_Percent__c.field-meta.xml
<CustomField>
    <fullName>KPI_Rule_2_Max_Percent__c</fullName>
    <label>KPI Rule 2 Max Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>