force-app/main/default/objects/Monthly_KPI_Employee__c/fields/KPI_Rule_3_Name__c.field-meta.xml
<CustomField>
    <fullName>KPI_Rule_3_Name__c</fullName>
    <label>KPI Rule 3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>