force-app/main/default/objects/Monthly_KPI_Employee__c/fields/KPI_Rule_3_Target__c.field-meta.xml
<CustomField>
    <fullName>KPI_Rule_3_Target__c</fullName>
    <label>KPI Rule 3 Target</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>