force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Monthly_KPI_Employee__c</referenceTo>
    <relationshipLabel>Monthly KPI Employees</relationshipLabel>
    <relationshipName>Monthly_KPI_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>