force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Monthly_KPI__c.field-meta.xml
<CustomField>
    <fullName>Monthly_KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly KPI</label>
    <referenceTo>Monthly_KPI__c</referenceTo>
    <relationshipLabel>Monthly KPI Employees</relationshipLabel>
    <relationshipName>Monthly_KPI_Employees_del</relationshipName>
    <type>Lookup</type>
</CustomField>