force-app/main/default/objects/Monthly_KPI_Employee__c/fields/No_of_Content__c.field-meta.xml
<CustomField>
    <fullName>No_of_Content__c</fullName>
    <formula>IF( Role__c = &apos;Sales Consultant&apos;, KPI_Rule_5_Value__c ,  KPI_Rule_6_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Content</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>