force-app/main/default/objects/Monthly_KPI_Employee__c/fields/No_of_Training_Section__c.field-meta.xml
<CustomField>
    <fullName>No_of_Training_Section__c</fullName>
    <formula>IF( Role__c = &apos;Sales Supevisor&apos;,  KPI_Rule_2_Value__c ,  IF( Role__c = &apos;Sales AM/Manager&apos;,  KPI_Rule_3_Value__c , 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Training Section</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>