force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Part_Discount__c.field-meta.xml
<CustomField>
    <fullName>Part_Discount__c</fullName>
    <label>Part Discount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>