force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Part_Service_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Part_Service_Revenue__c</fullName>
    <label>Part Service Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>