force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Promo_In__c.field-meta.xml
<CustomField>
    <fullName>Promo_In__c</fullName>
    <label>Promo In Commission</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>