force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Promo_In_Rate__c.field-meta.xml
<CustomField>
    <fullName>Promo_In_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Promo In Rate</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>