force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Promo_Out__c.field-meta.xml
<CustomField>
    <fullName>Promo_Out__c</fullName>
    <label>Promo Out Commission</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>