force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Service_Hour_Discount__c.field-meta.xml
<CustomField>
    <fullName>Service_Hour_Discount__c</fullName>
    <label>Service Hour Discount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>