force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Service_Hour_Rate__c.field-meta.xml
<CustomField>
    <fullName>Service_Hour_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Hour Rate</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>