force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Staff_Code__c.field-meta.xml
<CustomField>
    <fullName>Staff_Code__c</fullName>
    <formula>Employee__r.Staff_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Code</label>
    <type>Text</type>
</CustomField>