force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Total_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission__c</fullName>
    <label>Net Commission To Be Paid</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>