force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <label>Total Discount</label>
    <summarizedField>Monthly_KPI_Employee_Detail__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Monthly_KPI_Employee_Detail__c.Commission_Type__c</field>
        <operation>equals</operation>
        <value>Discount</value>
    </summaryFilterItems>
    <summaryForeignKey>Monthly_KPI_Employee_Detail__c.Monthly_KPI_Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>