force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Training_KPI_Score__c.field-meta.xml
<CustomField>
    <fullName>Training_KPI_Score__c</fullName>
    <formula>IF( Role__c = &apos;Sales Supevisor&apos;,  KPI_Rule_2_Value_Percent__c *100,  IF( Role__c = &apos;Sales AM/Manager&apos; ,  KPI_Rule_3_Value_Percent__c *100, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training KPI Score (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>