force-app/main/default/objects/Monthly_KPI_Employee__c/fields/TSI_Score__c.field-meta.xml
<CustomField>
    <fullName>TSI_Score__c</fullName>
    <formula>CASE(  KPI_Category_Management__r.Name , 
   &quot;Sales Consultant&quot;, KPI_Rule_6_Value__c ,
   &quot;Senior Sales Consultant&quot;, KPI_Rule_5_Value__c ,
   &quot;Sales AM/Manager&quot;, KPI_Rule_5_Value__c ,
   &quot;PCA Sales Consultant&quot;, KPI_Rule_3_Value__c ,
   &quot;PCA Supervisor&quot;,  KPI_Rule_5_Value__c  ,
   &quot;Service Consultant&quot;,  KPI_Rule_2_Value__c ,
   &quot;ALL Technician&quot;,   KPI_Rule_4_Value__c  ,
   KPI_Rule_2_Value__c  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSI Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>