force-app/main/default/objects/Monthly_KPI_Employee__c/fields/Used_Bike__c.field-meta.xml
<CustomField>
    <fullName>Used_Bike__c</fullName>
    <label>Used Bike</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>