force-app/main/default/objects/Monthly_KPI_Employee__c/validationRules/Lock_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PRIORVALUE(Is_Lock__c) == true,  ISCHANGED(Is_Lock__c) == false)</errorConditionFormula>
    <errorMessage>This record is locked</errorMessage>
</ValidationRule>